# test

./: CMakeLists.txt  test.cpp
cuda_lib/: CMakeLists.txt  cuda_mylib.cu  cuda_mylib.h
mylib/: CMakeLists.txt  mylib.cpp  mylib.h
